[gd_scene load_steps=2 format=3 uid="uid://debug_panel_uid"]

[ext_resource type="Script" path="res://scenes/ui/DebugPanel.gd" id="1_debug"]

[node name="DebugPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1_debug")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 0.95)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Debug Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="CurrencySection" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="CurrencyLabel" type="Label" parent="MainContainer/CurrencySection"]
layout_mode = 2
text = "Add Currency:"
horizontal_alignment = 1

[node name="CurrencyInput" type="SpinBox" parent="MainContainer/CurrencySection"]
layout_mode = 2
min_value = 1.0
max_value = 999999.0
step = 1.0
value = 100.0

[node name="AddCurrencyButton" type="Button" parent="MainContainer/CurrencySection"]
layout_mode = 2
text = "Add Currency"

[node name="HSeparator2" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="HotDogSection" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="HotDogLabel" type="Label" parent="MainContainer/HotDogSection"]
layout_mode = 2
text = "Add Hot Dogs:"
horizontal_alignment = 1

[node name="HotDogInput" type="SpinBox" parent="MainContainer/HotDogSection"]
layout_mode = 2
min_value = 1.0
max_value = 999999.0
step = 1.0
value = 50.0

[node name="AddHotDogButton" type="Button" parent="MainContainer/HotDogSection"]
layout_mode = 2
text = "Add Hot Dogs"

[node name="HSeparator3" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="QuickActions" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="QuickActionsLabel" type="Label" parent="MainContainer/QuickActions"]
layout_mode = 2
text = "Quick Actions:"
horizontal_alignment = 1

[node name="UnlockOfficeButton" type="Button" parent="MainContainer/QuickActions"]
layout_mode = 2
text = "Quick Office Unlock (600 currency)"

[node name="HireWorkerButton" type="Button" parent="MainContainer/QuickActions"]
layout_mode = 2
text = "Quick Worker Hire (20 currency + 10 hot dogs)"

[node name="HSeparator4" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Close Debug Panel"